fix spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -46,13 +46,13 @@
     height: 225px;
     margin: .5rem;
     position: relative;
-    width: 250px;
+    width: 300px;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
     text-align: center;
   }
 
   .card-img-top {
     width: 100%;
-    height: 12vw;
+    height: 11vw;
     object-fit: contain;
 }
